--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
         "-pdf",
         "-interaction=nonstopmode",
         "-synctex=1",
-        "-output-directory=build",
+        "-output-directory=../build",
         "%DOC%"
       ]
     }
@@ -21,6 +21,6 @@
   "latex-workshop.latex.autoBuild.run": "onSave",
   "latex-workshop.latex.rootFile.useSubFile": false,
   "latex-workshop.latex.rootFile.doNotPrompt": true,
-  "latex-workshop.latex.outDir": "build",
+  "latex-workshop.latex.outDir": "../build",
   "latex-workshop.view.pdf.viewer": "tab"
 }
